[project]
name = "atari-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium[atari]>=1.2.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
